--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 *.txt~
+#java specific
+*.class
+
+#netbeans ignore personal stuff 
+nbproject/private/
+
+
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
